--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,6 +1,7 @@
 name: Build
 
 on:
+  workflow_dispatch:
   push:
     branches:
       - 'main'
@@ -23,7 +24,6 @@ env:
 jobs:
   setup:
     name: Set up
-    if: github.repository == 'microsoft/vscode-python'
     runs-on: ubuntu-latest
     defaults:
       run:
@@ -45,7 +45,6 @@ jobs:
 
   build-vsix:
     name: Create VSIX
-    if: github.repository == 'microsoft/vscode-python'
     needs: setup
     runs-on: ubuntu-latest
     steps:
@@ -59,277 +58,33 @@ jobs:
           vsix_name: ${{ needs.setup.outputs.vsix_name }}
           artifact_name: ${{ needs.setup.outputs.vsix_artifact_name }}
 
-  lint:
-    name: Lint
-    if: github.repository == 'microsoft/vscode-python'
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-
-      - name: Lint
-        uses: ./.github/actions/lint
-        with:
-          node_version: ${{ env.NODE_VERSION }}
-
-  check-types:
-    name: Check Python types
-    if: github.repository == 'microsoft/vscode-python'
-    runs-on: ubuntu-latest
-    steps:
-      - name: Use Python ${{ env.PYTHON_VERSION }}
-        uses: actions/setup-python@v4
-        with:
-          python-version: ${{ env.PYTHON_VERSION }}
-
-      - name: Checkout
-        uses: actions/checkout@v3
-
-      - name: Install core Python requirements
-        uses: brettcannon/pip-secure-install@v1
-        with:
-          options: '-t ./pythonFiles/lib/python --no-cache-dir --implementation py'
-
-      - name: Install Jedi requirements
-        uses: brettcannon/pip-secure-install@v1
-        with:
-          requirements-file: './pythonFiles/jedilsp_requirements/requirements.txt'
-          options: '-t ./pythonFiles/lib/jedilsp --no-cache-dir --implementation py'
-
-      - name: Install other Python requirements
-        run: |
-          python -m pip --disable-pip-version-check install -t ./pythonFiles/lib/python --no-cache-dir --implementation py --no-deps --upgrade --pre debugpy
-          python -m pip install --upgrade -r build/test-requirements.txt
-
-      - name: Run Pyright
-        uses: jakebailey/pyright-action@v1
-        with:
-          working-directory: 'pythonFiles'
-
-  ### Non-smoke tests
-  tests:
-    name: Tests
-    if: github.repository == 'microsoft/vscode-python'
-    runs-on: ${{ matrix.os }}
-    defaults:
-      run:
-        working-directory: ${{ env.special-working-directory }}
-    strategy:
-      fail-fast: false
-      matrix:
-        # We're not running CI on macOS for now because it's one less matrix
-        # entry to lower the number of runners used, macOS runners are expensive,
-        # and we assume that Ubuntu is enough to cover the UNIX case.
-        os: [ubuntu-latest, windows-latest]
-        python: ['3.x']
-        test-suite: [ts-unit, python-unit, venv, single-workspace, multi-workspace, debugger, functional]
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-        with:
-          path: ${{ env.special-working-directory-relative }}
-
-      - name: Install Node
-        uses: actions/setup-node@v3
-        with:
-          node-version: ${{ env.NODE_VERSION }}
-          cache: 'npm'
-          cache-dependency-path: ${{ env.special-working-directory-relative }}/package-lock.json
-
-      - name: Install dependencies (npm ci)
-        run: npm ci
-
-      - name: Compile
-        run: npx gulp prePublishNonBundle
-
-      - name: Install Python ${{ matrix.python }}
-        uses: actions/setup-python@v4
-        with:
-          python-version: ${{ matrix.python }}
-
-      - name: Install debugpy
-        run: |
-          # We need to have debugpy so that tests relying on it keep passing, but we don't need install_debugpy's logic in the test phase.
-          python -m pip --disable-pip-version-check install -t ./pythonFiles/lib/python --no-cache-dir --implementation py --no-deps --upgrade --pre debugpy
-
-      - name: Install core Python requirements
-        uses: brettcannon/pip-secure-install@v1
-        with:
-          requirements-file: '"${{ env.special-working-directory-relative }}/requirements.txt"'
-          options: '-t "${{ env.special-working-directory-relative }}/pythonFiles/lib/python" --no-cache-dir --implementation py'
-        if: startsWith(matrix.python, 3.)
-
-      - name: Install Jedi requirements
-        uses: brettcannon/pip-secure-install@v1
-        with:
-          requirements-file: '"${{ env.special-working-directory-relative }}/pythonFiles/jedilsp_requirements/requirements.txt"'
-          options: '-t "${{ env.special-working-directory-relative }}/pythonFiles/lib/jedilsp" --no-cache-dir --implementation py'
-        if: startsWith(matrix.python, 3.)
-
-      - name: Install test requirements
-        run: python -m pip install --upgrade -r build/test-requirements.txt
-
-      - name: Install debugpy wheels (Python ${{ matrix.python }})
-        run: |
-          python -m pip install wheel
-          python -m pip --disable-pip-version-check install -r build/debugger-install-requirements.txt
-          python ./pythonFiles/install_debugpy.py
+      - name: Create release tag
         shell: bash
-        if: matrix.test-suite == 'debugger'
+        run: echo "TAG_NAME=$(date +v-%Y-%m-%d-%H%M)" >> $GITHUB_ENV
 
-      - name: Install functional test requirements
-        run: python -m pip install --upgrade -r ./build/functional-test-requirements.txt
-        if: matrix.test-suite == 'functional'
-
-      - name: Prepare pipenv for venv tests
+      - name: Create nightly release
+        id: create_nightly_release
+        uses: actions/create-release@v1
         env:
-          TEST_FILES_SUFFIX: testvirtualenvs
-          PYTHON_VIRTUAL_ENVS_LOCATION: './src/tmp/envPaths.json'
-        shell: pwsh
-        if: matrix.test-suite == 'venv'
-        run: |
-          python -m pip install pipenv
-          python -m pipenv run python ./build/ci/addEnvPath.py ${{ env.PYTHON_VIRTUAL_ENVS_LOCATION }} pipenvPath
+          # This token is provided by Actions, you do not need to create your own token
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          tag_name: ${{ env.TAG_NAME }}
+          release_name: Nightly Release ${{ env.TAG_NAME }}
+          body: Nigtly build of localized Python plugin.
+          draft: false
+          prerelease: true
 
-      - name: Prepare poetry for venv tests
-        env:
-          TEST_FILES_SUFFIX: testvirtualenvs
-        shell: pwsh
-        if: matrix.test-suite == 'venv'
-        run: |
-          python -m pip install poetry
-          Move-Item -Path ".\build\ci\pyproject.toml" -Destination .
-          poetry env use python
-
-      - name: Prepare virtualenv for venv tests
-        env:
-          TEST_FILES_SUFFIX: testvirtualenvs
-          PYTHON_VIRTUAL_ENVS_LOCATION: './src/tmp/envPaths.json'
-        shell: pwsh
-        if: matrix.test-suite == 'venv'
-        run: |
-          python -m pip install virtualenv
-          python -m virtualenv .virtualenv/
-          if ('${{ matrix.os }}' -match 'windows-latest') {
-            & ".virtualenv/Scripts/python.exe" ./build/ci/addEnvPath.py ${{ env.PYTHON_VIRTUAL_ENVS_LOCATION }} virtualEnvPath
-          } else {
-            & ".virtualenv/bin/python" ./build/ci/addEnvPath.py ${{ env.PYTHON_VIRTUAL_ENVS_LOCATION }} virtualEnvPath
-          }
-
-      - name: Prepare venv for venv tests
-        env:
-          TEST_FILES_SUFFIX: testvirtualenvs
-          PYTHON_VIRTUAL_ENVS_LOCATION: './src/tmp/envPaths.json'
-        shell: pwsh
-        if: matrix.test-suite == 'venv' && startsWith(matrix.python, 3.)
-        run: |
-          python -m venv .venv
-          if ('${{ matrix.os }}' -match 'windows-latest') {
-            & ".venv/Scripts/python.exe" ./build/ci/addEnvPath.py ${{ env.PYTHON_VIRTUAL_ENVS_LOCATION }} venvPath
-          } else {
-            & ".venv/bin/python" ./build/ci/addEnvPath.py ${{ env.PYTHON_VIRTUAL_ENVS_LOCATION }} venvPath
-          }
-
-      - name: Prepare conda for venv tests
-        env:
-          TEST_FILES_SUFFIX: testvirtualenvs
-          PYTHON_VIRTUAL_ENVS_LOCATION: './src/tmp/envPaths.json'
-        shell: pwsh
-        if: matrix.test-suite == 'venv'
-        run: |
-          # 1. For `terminalActivation.testvirtualenvs.test.ts`
-          if ('${{ matrix.os }}' -match 'windows-latest') {
-            $condaPythonPath = Join-Path -Path $Env:CONDA -ChildPath python.exe
-            $condaExecPath = Join-Path -Path $Env:CONDA -ChildPath Scripts | Join-Path -ChildPath conda
-          } else{
-            $condaPythonPath = Join-Path -Path $Env:CONDA -ChildPath bin | Join-Path -ChildPath python
-            $condaExecPath = Join-Path -Path $Env:CONDA -ChildPath bin | Join-Path -ChildPath conda
-          }
-          & $condaPythonPath ./build/ci/addEnvPath.py ${{ env.PYTHON_VIRTUAL_ENVS_LOCATION }} condaExecPath $condaExecPath
-          & $condaPythonPath ./build/ci/addEnvPath.py ${{ env.PYTHON_VIRTUAL_ENVS_LOCATION }} condaPath
-          & $condaExecPath init --all
-
-      - name: Set CI_PYTHON_PATH and CI_DISABLE_AUTO_SELECTION
-        run: |
-          echo "CI_PYTHON_PATH=python" >> $GITHUB_ENV
-          echo "CI_DISABLE_AUTO_SELECTION=1" >> $GITHUB_ENV
+      - name: Store nightly release upload URL
         shell: bash
-        if: matrix.test-suite != 'ts-unit'
+        run: echo "UPLOAD_URL=${{ steps.create_nightly_release.outputs.upload_url }}" >> $GITHUB_ENV
 
-      # Run TypeScript unit tests only for Python 3.X.
-      - name: Run TypeScript unit tests
-        run: npm run test:unittests
-        if: matrix.test-suite == 'ts-unit' && startsWith(matrix.python, '3.')
-
-      - name: Run Python unit tests
-        run: python pythonFiles/tests/run_all.py
-        if: matrix.test-suite == 'python-unit'
-
-      # The virtual environment based tests use the `testSingleWorkspace` set of tests
-      # with the environment variable `TEST_FILES_SUFFIX` set to `testvirtualenvs`,
-      # which is set in the "Prepare environment for venv tests" step.
-      # We also use a third-party GitHub Action to install xvfb on Linux,
-      # run tests and then clean up the process once the tests ran.
-      # See https://github.com/GabrielBB/xvfb-action
-      - name: Run venv tests
+      - name: Upload VSIX
+        uses: actions/upload-release-asset@v1.0.2
         env:
-          TEST_FILES_SUFFIX: testvirtualenvs
-          CI_PYTHON_VERSION: ${{ matrix.python }}
-        uses: GabrielBB/xvfb-action@v1.6
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          run: npm run testSingleWorkspace
-          working-directory: ${{ env.special-working-directory }}
-        if: matrix.test-suite == 'venv' && matrix.os == 'ubuntu-latest'
-
-      - name: Run single-workspace tests
-        env:
-          CI_PYTHON_VERSION: ${{ matrix.python }}
-        uses: GabrielBB/xvfb-action@v1.6
-        with:
-          run: npm run testSingleWorkspace
-          working-directory: ${{ env.special-working-directory }}
-        if: matrix.test-suite == 'single-workspace'
-
-      - name: Run multi-workspace tests
-        env:
-          CI_PYTHON_VERSION: ${{ matrix.python }}
-        uses: GabrielBB/xvfb-action@v1.6
-        with:
-          run: npm run testMultiWorkspace
-          working-directory: ${{ env.special-working-directory }}
-        if: matrix.test-suite == 'multi-workspace'
-
-      - name: Run debugger tests
-        env:
-          CI_PYTHON_VERSION: ${{ matrix.python }}
-        uses: GabrielBB/xvfb-action@v1.6
-        with:
-          run: npm run testDebugger
-          working-directory: ${{ env.special-working-directory }}
-        if: matrix.test-suite == 'debugger'
-
-      # Run TypeScript functional tests
-      - name: Run TypeScript functional tests
-        run: npm run test:functional
-        if: matrix.test-suite == 'functional'
-
-  smoke-tests:
-    name: Smoke tests
-    if: github.repository == 'microsoft/vscode-python'
-    runs-on: ${{ matrix.os }}
-    needs: [setup, build-vsix]
-    strategy:
-      fail-fast: false
-      matrix:
-        # We're not running CI on macOS for now because it's one less matrix entry to lower the number of runners used,
-        # macOS runners are expensive, and we assume that Ubuntu is enough to cover the UNIX case.
-        os: [ubuntu-latest, windows-latest]
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-
-      - name: Smoke tests
-        uses: ./.github/actions/smoke-tests
-        with:
-          node_version: ${{ env.NODE_VERSION }}
-          artifact_name: ${{ needs.setup.outputs.vsix_artifact_name }}
+          upload_url: ${{ env.UPLOAD_URL }}
+          asset_path: ms-python-insiders.vsix
+          asset_name: ms-python-${{ env.TAG_NAME }}.vsix
+          asset_content_type: application/octet-stream
