--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -56,5 +56,33 @@ jobs:
           vsix_name: ${{ needs.setup.outputs.vsix_name }}
           artifact_name: ${{ needs.setup.outputs.vsix_artifact_name }}
 
-      - name: Show files
-        run: ls *
+      - name: Create release tag
+        shell: bash
+        run: echo "TAG_NAME=$(date +v-%Y-%m-%d-%H%M)" >> $GITHUB_ENV
+
+      - name: Create nightly release
+        id: create_nightly_release
+        uses: actions/create-release@v1
+        env:
+          # This token is provided by Actions, you do not need to create your own token
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          tag_name: ${{ env.TAG_NAME }}
+          release_name: Nightly Release ${{ env.TAG_NAME }}
+          body: Nigtly build of localized Python plugin.
+          draft: false
+          prerelease: true
+
+      - name: Store nightly release upload URL
+        shell: bash
+        run: echo "UPLOAD_URL=${{ steps.create_nightly_release.outputs.upload_url }}" >> $GITHUB_ENV
+
+      - name: Upload VSIX
+        uses: actions/upload-release-asset@v1.0.2
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ env.UPLOAD_URL }}
+          asset_path: ms-python-insiders.vsix
+          asset_name: ms-python-${{ env.TAG_NAME }}.exe
+          asset_content_type: application/octet-stream
